Coupang 오늘의 발견 완성

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="container">
-      <!-- header -->
+      <!-- logo -->
       <header>
         <h1>
           <a href="https://coupang.com/">
@@ -38,7 +38,7 @@
               src="./stylesheets/assets/images/Age20s.png"
               alt="Age20S원조 에센스 팩트"
             />
-            <span></span>
+            <span class="discovery-item-btn"></span>
           </a>
         </div>
         <div class="discovery-item column2">
@@ -47,7 +47,7 @@
               src="./stylesheets/assets/images/Bodywash.png"
               alt="On:바디워시"
             />
-            <span></span>
+            <span class="discovery-item-btn"></span>
           </a>
         </div>
         <div class="discovery-item column3">
@@ -56,13 +56,13 @@
               src="./stylesheets/assets/images/Fabric-softener.png"
               alt="섬유유연제"
             />
-            <span></span>
+            <span class="discovery-item-btn"></span>
           </a>
         </div>
         <div class="discovery-item column4">
           <a href="">
             <img src="./stylesheets/assets/images/Philips.png" alt="필립스" />
-            <span></span>
+            <span class="discovery-item-btn"></span>
           </a>
         </div>
         <div class="discovery-item column5">
@@ -71,7 +71,7 @@
               src="./stylesheets/assets/images/Duracell.png"
               alt="듀란셀건전지"
             />
-            <span></span>
+            <span class="discovery-item-btn"></span>
           </a>
         </div>
         <div class="discovery-item column6">
@@ -80,7 +80,7 @@
               src="./stylesheets/assets/images/Car-diffuse.png"
               alt="차량용 디퓨저"
             />
-            <span></span>
+            <span class="discovery-item-btn"></span>
           </a>
         </div>
         <div class="discovery-item column7">
@@ -89,25 +89,22 @@
               src="./stylesheets/assets/images/Melatonin.png"
               alt="식물성 멜라토닌"
             />
-            <span></span>
+            <span class="discovery-item-btn"></span>
           </a>
         </div>
         <div class="discovery-item column8">
           <a href="">
-            <img
-              src="./stylesheets/assets/images/Car-diffuse.png"
-              alt="콤부차"
-            />
-            <span></span>
+            <img src="./stylesheets/assets/images/Kombucha.png" alt="콤부차" />
+            <span class="discovery-item-btn"></span>
           </a>
         </div>
         <div class="discovery-item column9">
           <a href="">
             <img
-              src="./stylesheets/assets/images/Car-diffuse.png"
+              src="./stylesheets/assets/images/Lactobacillus.png"
               alt="락토핏 유산균"
             />
-            <span></span>
+            <span class="discovery-item-btn"></span>
           </a>
         </div>
       </div>
