--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h3>오늘 쿠팡이 엄선한 가장 HOT한 상품!</h3>
       </div>
       <!-- 아이템 리스트 -->
-      <article class="discovery-itemlist">
+      <div class="discovery-itemlist">
         <div class="discovery-item column1">
           <a href="">
             <img
@@ -107,7 +107,7 @@
             <span class="discovery-item-btn"></span>
           </a>
         </div>
-      </article>
+      </div>
     </section>
   </body>
 </html>
